<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">QR Platba Widget</string>
    <string name="widget_name">QR Platba</string>
    <string name="config_title">Nastavení pro widget QR Platba</string>
    <string name="config_account_prompt">Zadejte číslo účtu příjemce platby</string>
    <string name="account_number_hint">Číslo účtu (IBAN nebo CZ formát)</string>
    <string name="account_hint_detail">IBAN: CZ6508000000192000145399\nnebo CZ formát: 123456-1234567890/0800</string>
    <string name="name_hint">Název (volitelný)</string>
    <string name="save_button">Uložit</string>
    <string name="cancel_button">Zavřít</string>
    <string name="enter_amount">Zadat částku</string>
    <string name="amount_hint">Částka v Kč</string>
    <string name="ok_button">Generovat</string>
    <string name="share_button">Sdílet</string>
    <string name="payment_qr">QR Platba</string>
    <string name="no_account_error">Nejdříve nastavte číslo účtu v nastavení widgetu</string>
    <string name="invalid_amount_error">Zadejte platnou částku</string>
    <string name="invalid_account_error">Neplatný formát čísla účtu</string>
    <string name="add_widget_manual">Přidejte widget podržením prstu na ploše a vyberte Widgety</string>
    <string name="account_saved">Nastavení uloženo</string>
</resources>
